# ShortsUserbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PKGBUILD  authorize.py  docker-compose.yaml  flake.nix  pyproject.toml  shorts_userbot.py
systemd_files/systemd/system/: shorts_userbot.service
systemd_files/sysusers.d/: shorts-userbot.conf
systemd_files/tmpfiles.d/: shorts-userbot.conf
userbot/: __init__.py  __main__.py  config.example.py
